--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ _________________________________________________________ -->
                     <!-- /.6 -->
 
                     <div class="col-sm-6">
-                        <p>&copy; 2015 Your name goes here. All rights reserved.</p>
+                        <p>&copy; 2015 Stefanie Centi - All rights reserved.</p>
                     </div>
 
                     <div class="col-sm-12">
