commented out customer and map sections

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ _________________________________________________________ -->
         <!-- *** REFERENCES END *** -->
 
         <!-- *** CUSTOMERS ***
-_________________________________________________________ -->
+_________________________________________________________ 
 
         <div class="section text-gray" id="customers">
             <div class="container">
@@ -786,15 +786,15 @@ _________________________________________________________ -->
                             </div>
                         </div>
 
-                    </div>
+                    </div>-->
                     <!-- /.row -->
 
 
-                </div>
+                <!-- </div> -->
                 <!-- /.12 -->
-            </div>
+            <!-- </div> -->
             <!-- /.container -->
-        </div>
+        <!-- </div> -->
         <!-- /.section -->
 
         <!-- *** CUSTOMERS END *** -->
@@ -859,9 +859,9 @@ _________________________________________________________ -->
         <!-- *** MAP ***
 _________________________________________________________ -->
 
-        <div class="section" id="map">
+        <!-- <div class="section" id="map"> -->
 
-        </div>
+        <!-- </div> -->
         <!-- /.section -->
 
         <!-- *** MAP END *** -->
@@ -923,8 +923,8 @@ _________________________________________________________ -->
     <script src="js/waypoints.min.js"></script>
 
     <!-- maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
-    <script src="js/gmaps.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script> -->
+    <!-- <script src="js/gmaps.js"></script> -->
 
     <!-- masonry layout -->
     <script src="js/masonry.pkgd.min.js"></script>
