Added 2 projects to portfolio, made recommended change to Name at top of page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ _________________________________________________________ -->
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand scrollTo" href="#intro">IT Worker</a>
+                <a class="navbar-brand scrollTo" href="#intro">Stefanie Centi</a>
             </div>
 
             <div class="navbar-collapse collapse" id="navigation">
@@ -126,19 +126,19 @@ _________________________________________________________ -->
 
                             <div class="col-sm-6 text-left" data-animate="fadeInUp">
 
-                                <p>Graduating from Rutgers University in 1986 with a Degree in Comp Sci. and later going on to complete my masters in Comp Sci at FDU, I started my career in UNIX/C development and proceeded to spend several years developing systems in C++ and Java.During my time of I have pursued several different interests as well as taking courses in Java to keep current with programming.</p>
+                                <p>Graduating from Rutgers University in 1986 with a Degree in Comp Sci. and later going on to complete my masters in Comp Sci at FDU, I started my career in UNIX/C development and proceeded to spend several years developing systems in C++ and Java. During my time off I have pursued several different interests as well as taking courses in Java to keep current with programming.</p>
 
                                 <p>I recently completed an intensive coding bootcamp at Rutgers University.  I thoroughly enjoy coding and am pursing opportunities as a full-stack developer with a focus on Javascript, JQuery, Node.js and React.</p>
 
                                 <h3>Other Interests</h3>
 
-                                <h4>Music</h4>Music has always been a big part of my life. I played the sax in high school and even in the marching band at Rutgers. My favorite music genres are Alternative, Rock and Jazz but I like all types of music. Since I don't have time to join a band I am looking foward to picking up guitar lessons so I can play music anytime and just about anywhere.</p>
+                                <h4>Music</h4>Music has always been a big part of my life. I played the sax in high school and even in the marching band at Rutgers. My favorite music genres are Alternative, Rock and Jazz but I like all types of music. I am interested in picking up guitar lessons so I can play music anytime and just about anywhere.</p>
 
                                 <h4>Sports</h4>I enjoy watching my children play their favorite sports.  I also like to play sports as well.  For me it's softball and tennis. My daughters like soccer and softball, basketball and color guard. While color guard may not be considered a sport by most, my daughter who was in marching band and guard had to practice and train more hours than her sisters combined!
 
                                 <h4>Health & Fitness</h4>I believe the daily grind we are all being put through is truly a detriment to our health.  Including brain health!  I am really interested in the brain and the reasearch is fun to read about.
                                 <p>
-                                I also like working out but since I don't have a lot of time, I prefer short work-outs that I can do early in the morning so I get on with my day knowing I got some sort of excercise in.  High-intesity workouts are the best! Although, I have been slacking off a bit since working on my latest coding endeavor has usurped most of my time!!
+                                I also like working out. I prefer short work-outs that I can do early in the morning so I get on with my day knowing I got some sort of excercise in.  High-intesity workouts are the best! 
                                 </p>
 
                             </div>
@@ -212,7 +212,7 @@ _________________________________________________________ -->
                     </div>
 <!--  
                     <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 mt-big" data-animate="bounceIn">
-                        <img src="img/sac_profile.jpg" class="image img-circle img-responsive" alt="This is me - IT worker">
+                        <img src="img/sac_profile.jpg" class="image img-circle img-responsive" alt="This is me - Stefanie Centi">
                     </div>
 -->
                 </div>
@@ -235,7 +235,11 @@ _________________________________________________________ -->
                             <div class="icon"><i class="fa fa-university fa-lg" aria-hidden="true"></i>
                             </div>
                             <!-- <h3 class="heading">Rutgers University, New Brunswick</h3> -->
-                            <h3>Rutgers University, New Brunswick</h3>
+                            <h3>Rutgers University</h3>
+
+                            <br>
+
+                            <h4>New Brunswick, NJ</h4>
                             <h4>Full-Stack Developer Certification</h4>
                             <h5>2016</h5>
                         </div>
@@ -244,6 +248,7 @@ _________________________________________________________ -->
                             <div class="icon"><i class="fa fa-university fa-lg" aria-hidden="true"></i>
                             </div>
                             <h3>Raritan Valley Community College</h3>
+                            <h4>Branchburg, NJ</h4>
                             <h4>Business Solutions, Java Programing</h4>
                             <h5>2012</h5>
                         </div>
@@ -251,18 +256,20 @@ _________________________________________________________ -->
                         <div class="col-md-3" data-animate="fadeInUp">
                             <div class="icon"><i class="fa fa-university fa-lg" aria-hidden="true"></i>
                             </div>
-                            <h3>Farleigh Dickenson University, Teaneck</h3>
+                            <h3>Farleigh Dickenson University </h3>
+                            <h4>Teaneck, NJ </h4>
                             <h4>MS Computer Science</h4>
                             <h5>1994</h5>
-                        </div>
+                         </div>
 
                         <div class="col-md-3" data-animate="fadeInUp">
                             <div class="icon"><i class="fa fa-university fa-lg" aria-hidden="true"></i>
                             </div>
-                            <h3>Rutgers University - Douglass College, New Brunswick</h3>
-                            <h4>MS Computer Science</h4>
+                            <h3>Rutgers University - Douglass College</h3>
+                            <h4> New Brunswick, NJ </h4>
+                            <h4>BA Computer Science</h4>
                             <h5>1986</h5>
-                        </div>
+                         </div>
 
                     </div>
 
@@ -480,7 +487,7 @@ _________________________________________________________ -->
 
                         <p class="lead" data-animate="fadeInUp">I have worked on dozens of projects so I have picked only the latest for you.</p>
                     </div>
-
+<!-- TODO: put in once there are projects in more than one category
                     <ul id="filter" data-animate="fadeInUp">
                         <li class="active"><a href="#" data-filter="all">All</a>
                         </li>
@@ -493,6 +500,7 @@ _________________________________________________________ -->
                         <li><a href="#" data-filter="other">React</a>
                         </li>
                     </ul>
+-->
 
                     <div id="detail">
 
@@ -514,55 +522,57 @@ _________________________________________________________ -->
                         <div class="reference-item" data-category="webdesign">
                             <div class="reference">
                                 <a href="#">
-                                    <img src="img/portfolio-1.jpg" class="img-responsive" alt="" />
+                                    <img src="img/aquaman-1.jpg" class="img-responsive" alt="" />
 
                                     <div class="overlay">
-                                        <h3 class="reference-title">Project name</h3> 
-                                        <p>Short project description goes here...</p>
+                                        <h3 class="reference-title">Superhero Hangman</h3>
+                                        <p>A version of hangman for superheroes!</p>
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg">
+                                <div class="sr-only reference-description" data-images="img/aquaman-1.jpg,img/aquaman.jpg">
 
-                                    <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour
-                                        explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
+                                    <p>Developed using Javascript</p>
 
-                                    <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies
-                                        talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
+                                    <p>Press any Key to start.  Enter letters until you win or lose.  Note: the background may be Aquaman but don't be fooled!</p>
+
+                                    <p>Background pic and insert, credit: Julia Centi</p>
 
                                     <p class="buttons">
-                                        <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-globe"></i> Visit website</a>
-                                        <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-download"></i> Download case study</a>
+                                        <a class="btn btn-primary" href="https://js-hangman.herokuapp.com/"><i class="fa fa-globe"></i> Visit website</a>
                                     </p>
                                 </div>
                             </div>
                         </div>
+
                         <div class="reference-item" data-category="seo">
                             <div class="reference">
                                 <a href="#">
                                     <img src="img/portfolio-2.jpg" class="img-responsive" alt="" />
 
                                     <div class="overlay">
-                                        <h3 class="reference-title">Project name</h3> 
-                                        <p>Short project description goes here...</p>
+                                        <h3 class="reference-title">Keep It Simple</h3> 
+                                        <p>Recipe App for Those Short on Time!</p>
                                     </div>
                                 </a>
 
                                 <div class="sr-only reference-description" data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg">
 
-                                    <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour
-                                        explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
+                                    <h3>Screen Shots Coming Soon...</h3>
 
-                                    <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies
-                                        talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
+                                    <p>How many times have you looked at your fridge wondering what to make for dinner?  Keep It Simple by choosing 3 or 4 ingredients and find a recipe!</p>
+  
+                                    <p>This is an app that takes in an user's food (maybe 3-5 items to start with) from their fridge and brings up recipes and creates a menu potentially for the week.</p>
+
+                                    <p>Future features include the ability to select recipes and print a shopping lists based on that. This is geared towards college students and those who don’t have too much food on hand, or don't have much time to go food shopping.</p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-globe"></i> Visit website</a>
-                                        <a class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-download"></i> Download case study</a>
                                     </p>
                                 </div>
                             </div>
                         </div>
+<!-- TODO: Add projects HERE:
 
                         <div class="reference-item" data-category="marketing">
                             <div class="reference">
@@ -730,6 +740,8 @@ _________________________________________________________ -->
                         </div>
 
                     </div>
+END TODO -->
+
                     <!-- /#references-masonry -->
 
                 </div>
@@ -886,7 +898,7 @@ _________________________________________________________ -->
                     <!-- /.6 -->
 
                     <div class="col-sm-6">
-                        <p>&copy; 2015 Stefanie Centi - All rights reserved.</p>
+                        <p>&copy; 2016 Stefanie Centi - All rights reserved.</p>
                     </div>
 
                     <div class="col-sm-12">
